@@ -15,7 +15,7 @@ begin
     gem.rubyforge_project = 'padrino-mailer'
     gem.version = Padrino.version
     gem.add_runtime_dependency     "padrino-core",  "= #{Padrino.version}"
-    gem.add_runtime_dependency     "tmail",         ">= 1.2"
+    gem.add_runtime_dependency     "mail",          ">= 2.2.0"
     gem.add_development_dependency "shoulda",       ">= 2.10.3"
     gem.add_development_dependency "haml",          ">= 2.2.1"
     gem.add_development_dependency "mocha",         ">= 0.9.7"
