@@ -9,7 +9,7 @@ Gem::Specification.new do |s|
 
   s.required_rubygems_version = Gem::Requirement.new(">= 0") if s.respond_to? :required_rubygems_version=
   s.authors = ["Padrino Team", "Nathan Esquenazi", "Davide D'Agostino", "Arthur Chiu"]
-  s.date = %q{2010-04-22}
+  s.date = %q{2010-04-23}
   s.description = %q{Mailer system for padrino allowing easy delivery of application emails}
   s.email = %q{padrinorb@gmail.com}
   s.extra_rdoc_files = [
@@ -49,7 +49,7 @@ Gem::Specification.new do |s|
 
     if Gem::Version.new(Gem::RubyGemsVersion) >= Gem::Version.new('1.2.0') then
       s.add_runtime_dependency(%q<padrino-core>, ["= 0.9.10"])
-      s.add_runtime_dependency(%q<tmail>, [">= 1.2"])
+      s.add_runtime_dependency(%q<mail>, [">= 2.2.0"])
       s.add_development_dependency(%q<shoulda>, [">= 2.10.3"])
       s.add_development_dependency(%q<haml>, [">= 2.2.1"])
       s.add_development_dependency(%q<mocha>, [">= 0.9.7"])
@@ -57,7 +57,7 @@ Gem::Specification.new do |s|
       s.add_development_dependency(%q<webrat>, [">= 0.5.1"])
     else
       s.add_dependency(%q<padrino-core>, ["= 0.9.10"])
-      s.add_dependency(%q<tmail>, [">= 1.2"])
+      s.add_dependency(%q<mail>, [">= 2.2.0"])
       s.add_dependency(%q<shoulda>, [">= 2.10.3"])
       s.add_dependency(%q<haml>, [">= 2.2.1"])
       s.add_dependency(%q<mocha>, [">= 0.9.7"])
@@ -66,7 +66,7 @@ Gem::Specification.new do |s|
     end
   else
     s.add_dependency(%q<padrino-core>, ["= 0.9.10"])
-    s.add_dependency(%q<tmail>, [">= 1.2"])
+    s.add_dependency(%q<mail>, [">= 2.2.0"])
     s.add_dependency(%q<shoulda>, [">= 2.10.3"])
     s.add_dependency(%q<haml>, [">= 2.2.1"])
     s.add_dependency(%q<mocha>, [">= 0.9.7"])
