@@ -11,6 +11,13 @@ class TestPadrinoMailer < Test::Unit::TestCase
       Padrino::Mailer::Base::views_path << MailerDemo.views
       MailerDemo::SampleMailer.smtp_settings = MailerDemo.smtp_settings
     }
+    
+    should "be able to deliver inline emails using the email helper" do
+      assert_email_sent(:to => 'john@apple.com', :from => 'joe@smith.com', :via => :smtp, 
+                        :subject => 'Test Email', :body => 'Test Body')
+      visit '/deliver/inline', :post
+      assert_equal 'mail delivered', last_response.body
+    end
 
     should 'be able to deliver plain text emails' do
       assert_email_sent(:to => 'john@fake.com', :from => 'noreply@birthday.com', :via => :smtp,
@@ -35,11 +42,4 @@ class TestPadrinoMailer < Test::Unit::TestCase
       assert_equal 'mail delivered', last_response.body
     end
   end
-
-  protected
-
-    def assert_email_sent(mail_attributes)
-      delivery_attributes = mail_attributes.merge(:smtp => MailerDemo.smtp_settings)
-      Padrino::Mailer::MailObject.any_instance.expects(:send_mail).with(delivery_attributes).once.returns(true)
-    end
 end
